# JWSearch

./: CMakeCache.txt  CMakeLists.txt  JWSearch  Makefile  Parameters.h  cmake_install.cmake  data.cpp  data.h  func.cpp  func.h  index.cpp  index.h  main.cpp  query.cpp  query.h  search.cpp  search.h  utility.cpp  utility.h  verify.cpp  verify.h
